--- a/hamming/graphic_interface/g_interface/docker-compose.yml
+++ b/hamming/graphic_interface/g_interface/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_HOST=${DB_HOST}
 
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+
     ports:
       - "8000:8000"
       - "80:8000"
